# phoenixbot

gantry_control_node/: CMakeLists.txt  package.xml
gantry_control_node/scripts/: gantry_control_node.cpp
gorgon_node/: CMakeLists.txt
gorgon_node/scripts/: gorgon.py
marker_transforms/src/: aruco.cpp  aruco.h  camera_aruco.cpp  camera_feed.cpp  documentation_on_camera.txt
marker_transforms/src/camera/: package.xml
marker_transforms/src/camera/camera_pub/: camera_feed.cpp
phoenixbot_2dnav/: document_of_2dnav
phoenixbot_description/urdf/: phoenixbot.urdf
phoenixbot_driver/: CMakeLists.txt
phoenixbot_localization/launch/: phoenixbot_localization.launch
pulley_behavior/: CMakeLists.txt  package.xml
pulley_behavior/pulley/: tf_listener.py
simon/: CMakeLists.txt  package.xml
simon/src/: simon.py
